Alignment corrected
Issue resolved: #4096

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -236,7 +236,7 @@ p {
   transform: translateX(-50%);
   /* background-color: #240046; */
   background-color: var(--light-pink);
-  max-height: 50.8rem;
+  max-height: 55rem;
   width: 100%;
   max-width: 50rem;
   overflow: hidden;
